{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "BoardInput",
            "id": "2961b746-c471-4cb5-90e7-bee0773ee0a0",
            "actions": [
                {
                    "name": "MouseMovement",
                    "type": "PassThrough",
                    "id": "edc8cd02-0bc4-44cc-8d4a-97efee49d5d6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "MouseInput",
                    "id": "eb245d12-e245-4c9e-8997-b71a25a08d4d",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0bac88bd-b086-458f-8d4f-61629da51464",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cc73152c-a465-4699-bf28-73dba7182034",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fbdbbd22-27e8-4cd4-b624-7ff05f5e5671",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a8835e50-1229-43f8-bc67-52d6dab28805",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}